# comp0078-assignment2

./: .gitignore  README.md  main.py  pyproject.toml  submission.tex
demo_code/: poorCodeDemoDig.nb
outputs/: laplacian_interpolation_report
outputs/part1/: q1.csv  q2.csv  q2_confusion.csv  q3_confusion.csv  q5_1-mini.csv  q5_1.csv  q5_2.csv  q5_confusion.csv  q6.csv  q6_confusion.csv  q6_performance.csv
outputs/part2/: laplacian_interpolation_report  laplacian_interpolation_report.csv  laplacian_kernel_interpolation_report
outputs/part3/: q1a_lin_reg.npz  q1a_one_nn.npz  q1a_perceptron.npz  q1a_winnow.npz
src/: constants.py
src/models/: 1_NN.py  SSL.py  helpers.py  kernels.py  laplacian_interpolation.py  linear_regression_classifier.py  model.py  one_nn.py  perceptron.py  single_class_perceptron.py  winnow.py
src/models/multi_class/: perceptron.py
src/models/single_class/: linear_regression_classifier.py  model.py  one_nn.py  perceptron.py  winnow.py
src/solutions/: part_1.py  part_2.py  part_3.py  q2.py
